--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
   },
   "dependencies": {
     "axios": "^0.24.0",
-    "core-js": "^3.6.5",
+    "core-js": "^3.19.0",
+    "firebase": "^9.2.0",
+    "quill": "^1.3.7",
+    "quill-image-resize-module": "^3.0.0",
     "vue": "^2.6.11",
     "vue-router": "^3.5.3",
     "vue-store": "^0.3.1-moved",
+    "vue2-editor": "^2.10.3",
     "vuetify": "^2.4.0",
     "vuex": "^3.6.2"
   },
